--- a/app1/web.xml
+++ b/app1/web.xml
@@ -7,11 +7,11 @@
 <web-app>
   <servlet>
     <servlet-name>Modern</servlet-name>
-    <servlet-class>ModernServlet</servlet-class>
+    <servlet-class>com.sailing.tomcat.servlet.ModernServlet</servlet-class>
   </servlet>
   <servlet>
     <servlet-name>Primitive</servlet-name>
-    <servlet-class>PrimitiveServlet</servlet-class>
+    <servlet-class>com.sailing.tomcat.servlet.PrimitiveServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>Modern</servlet-name>
